// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DependencyGraph > addModule > when add new modules > should match snapshots 1`] = `
[
  {
    "dependencies": [
      1359,
      1361,
    ],
    "dependents": [
      1363,
    ],
    "id": 1362,
    "path": "src/screens/index.ts",
  },
  {
    "dependencies": [
      1359,
    ],
    "dependents": [
      1371,
    ],
    "id": 1372,
    "path": "root/screens.ts",
  },
  {
    "dependencies": [
      509,
      73,
      1119,
      1362,
    ],
    "dependents": [
      1364,
    ],
    "id": 1363,
    "path": "src/navigators/RootStack.tsx",
  },
  {
    "dependencies": [
      73,
      448,
      1372,
    ],
    "dependents": [
      1370,
    ],
    "id": 1371,
    "path": "root/entry.ts",
  },
  {
    "dependencies": [
      1363,
    ],
    "dependents": [
      1368,
    ],
    "id": 1364,
    "path": "src/navigators/index.ts",
  },
  {
    "dependencies": [
      254,
      448,
      1368,
      1369,
      1371,
    ],
    "dependents": [],
    "id": 1370,
    "path": "index.js",
  },
  {
    "dependencies": [
      509,
      73,
      518,
      814,
      914,
      986,
      1043,
      1364,
      1367,
    ],
    "dependents": [
      1370,
    ],
    "id": 1368,
    "path": "src/App.tsx",
  },
]
`;

exports[`DependencyGraph > dependenciesOf > should match snapshot 1`] = `
[
  {
    "dependencies": [
      508,
    ],
    "dependents": [
      512,
      514,
      633,
      655,
      657,
      679,
      680,
      774,
      784,
      790,
      804,
      806,
      807,
      808,
      809,
      811,
      812,
      813,
      826,
      840,
      862,
      871,
      876,
      878,
      887,
      900,
      906,
      908,
      996,
      1000,
      1025,
      1028,
      1030,
      1035,
      1036,
      1038,
      1050,
      1053,
      1056,
      1057,
      1058,
      1061,
      1064,
      1068,
      1069,
      1070,
      1071,
      1076,
      1080,
      1081,
      1082,
      1094,
      1106,
      1107,
      1109,
      1110,
      1111,
      1113,
      1114,
      1115,
      1116,
      1120,
      1121,
      1122,
      1139,
      1141,
      1143,
      1145,
      1147,
      1148,
      1150,
      1152,
      1154,
      1158,
      1160,
      1162,
      1164,
      1166,
      1168,
      1170,
      1172,
      1176,
      1178,
      1181,
      1183,
      1185,
      1187,
      1189,
      1190,
      1352,
      1353,
      1359,
      1361,
      1363,
      1368,
    ],
    "id": 509,
    "path": "node_modules/react/jsx-runtime.js",
  },
  {
    "dependencies": [
      72,
    ],
    "dependents": [
      74,
      206,
      207,
      237,
      243,
      257,
      259,
      262,
      263,
      265,
      266,
      270,
      271,
      272,
      276,
      277,
      279,
      280,
      282,
      302,
      304,
      308,
      309,
      329,
      330,
      336,
      339,
      344,
      345,
      374,
      375,
      376,
      378,
      380,
      383,
      387,
      388,
      390,
      391,
      395,
      399,
      400,
      401,
      402,
      403,
      404,
      407,
      408,
      409,
      410,
      412,
      416,
      417,
      418,
      439,
      440,
      443,
      446,
      457,
      459,
      460,
      461,
      462,
      449,
      464,
      465,
      466,
      467,
      468,
      469,
      470,
      397,
      473,
      474,
      475,
      478,
      479,
      480,
      481,
      483,
      484,
      487,
      488,
      398,
      489,
      490,
      492,
      493,
      494,
      495,
      498,
      499,
      500,
      503,
      504,
      505,
      506,
      507,
      508,
      512,
      514,
      625,
      633,
      634,
      635,
      638,
      639,
      640,
      641,
      644,
      645,
      647,
      648,
      651,
      652,
      653,
      655,
      656,
      657,
      678,
      679,
      680,
      771,
      774,
      777,
      784,
      790,
      804,
      806,
      807,
      808,
      809,
      811,
      812,
      813,
      826,
      828,
      829,
      830,
      831,
      832,
      833,
      834,
      835,
      836,
      837,
      838,
      839,
      840,
      844,
      846,
      858,
      859,
      860,
      861,
      862,
      864,
      865,
      866,
      871,
      872,
      875,
      876,
      877,
      878,
      879,
      880,
      881,
      882,
      883,
      884,
      885,
      886,
      887,
      888,
      889,
      890,
      891,
      892,
      894,
      895,
      896,
      897,
      899,
      900,
      901,
      904,
      905,
      906,
      907,
      908,
      910,
      912,
      913,
      981,
      982,
      985,
      987,
      988,
      989,
      995,
      996,
      1000,
      1006,
      1007,
      1009,
      1010,
      1011,
      1013,
      1014,
      1024,
      1025,
      1028,
      1030,
      1035,
      1036,
      1038,
      1050,
      1053,
      1054,
      1056,
      1057,
      1058,
      1061,
      1064,
      1067,
      1068,
      1069,
      1070,
      1071,
      1074,
      1075,
      1076,
      1080,
      1081,
      1082,
      1094,
      1095,
      1096,
      1106,
      1107,
      1108,
      1109,
      1110,
      1111,
      1112,
      1113,
      1114,
      1115,
      1116,
      1117,
      1118,
      1120,
      1121,
      1122,
      1127,
      1139,
      1141,
      1143,
      1145,
      1147,
      1148,
      1150,
      1152,
      1154,
      1158,
      1160,
      1162,
      1164,
      1166,
      1168,
      1170,
      1172,
      1174,
      1176,
      1178,
      1179,
      1181,
      1183,
      1185,
      1187,
      1189,
      1190,
      1352,
      1353,
      1358,
      1359,
      1361,
      1363,
      1368,
    ],
    "id": 73,
    "path": "node_modules/react/index.js",
  },
  {
    "dependencies": [
      18,
      32,
      335,
      339,
      378,
      379,
      449,
      387,
      388,
      390,
      391,
      395,
      400,
      337,
      403,
      282,
      397,
      404,
      407,
      410,
      374,
      412,
      416,
      417,
      375,
      376,
      418,
      263,
      419,
      420,
      422,
      148,
      377,
      167,
      450,
      181,
      423,
      425,
      426,
      158,
      210,
      289,
      244,
      268,
      287,
      324,
      322,
      429,
      76,
      147,
      135,
      130,
      431,
      433,
      211,
      435,
      188,
      437,
      264,
      29,
      438,
      38,
      228,
      439,
      442,
      443,
      70,
      445,
      446,
      124,
      447,
      155,
      37,
      57,
      162,
      164,
      274,
      265,
      373,
    ],
    "dependents": [
      451,
      460,
      461,
      462,
      512,
      515,
      545,
      564,
      621,
      630,
      633,
      634,
      635,
      645,
      653,
      655,
      656,
      657,
      671,
      672,
      679,
      680,
      771,
      774,
      776,
      789,
      790,
      804,
      805,
      806,
      808,
      809,
      811,
      812,
      813,
      896,
      897,
      901,
      904,
      984,
      992,
      993,
      998,
      999,
      1000,
      1002,
      1003,
      1004,
      1005,
      1006,
      1007,
      1008,
      1009,
      1010,
      1011,
      1013,
      1014,
      1025,
      1028,
      1029,
      1030,
      1031,
      1032,
      1035,
      1036,
      1038,
      1039,
      1044,
      1045,
      1046,
      1047,
      1048,
      1050,
      1051,
      1053,
      1056,
      1057,
      1058,
      1061,
      1064,
      1068,
      1069,
      1070,
      1071,
      1080,
      1082,
      1092,
      1097,
      1106,
      1107,
      1109,
      1110,
      1111,
      1112,
      1113,
      1114,
      1115,
      1124,
      1125,
      1126,
      1127,
      1129,
      1135,
      1157,
      1158,
      1168,
      1174,
      1353,
      1359,
      1361,
      1370,
    ],
    "id": 448,
    "path": "node_modules/react-native/index.js",
  },
  {
    "dependencies": [
      512,
      514,
      516,
      517,
    ],
    "dependents": [
      1057,
      1070,
      1071,
      1081,
      1115,
      1359,
      1368,
    ],
    "id": 518,
    "path": "node_modules/react-native-safe-area-context/src/index.tsx",
  },
  {
    "dependencies": [
      1042,
    ],
    "dependents": [
      1120,
      1122,
      1359,
      1361,
      1367,
      1368,
    ],
    "id": 1043,
    "path": "node_modules/dripsy/src/index.ts",
  },
  {
    "dependencies": [
      1120,
      1121,
      1122,
    ],
    "dependents": [
      1359,
      1361,
    ],
    "id": 1123,
    "path": "src/components/index.ts",
  },
  {
    "dependencies": [
      73,
      1357,
      666,
    ],
    "dependents": [
      1359,
    ],
    "id": 1358,
    "path": "src/assets/logo.svg",
  },
]
`;

exports[`DependencyGraph > dependentsOf > should match snapshot 1`] = `
[
  {
    "dependencies": [
      1359,
      1361,
    ],
    "dependents": [
      1363,
    ],
    "id": 1362,
    "path": "src/screens/index.ts",
  },
]
`;

exports[`DependencyGraph > inverseDependenciesOf > should match snapshot 1`] = `
[
  {
    "dependencies": [
      1359,
      1361,
    ],
    "dependents": [
      1363,
    ],
    "id": 1362,
    "path": "src/screens/index.ts",
  },
  {
    "dependencies": [
      509,
      73,
      1119,
      1362,
    ],
    "dependents": [
      1364,
    ],
    "id": 1363,
    "path": "src/navigators/RootStack.tsx",
  },
  {
    "dependencies": [
      1363,
    ],
    "dependents": [
      1368,
    ],
    "id": 1364,
    "path": "src/navigators/index.ts",
  },
  {
    "dependencies": [
      509,
      73,
      518,
      814,
      914,
      986,
      1043,
      1364,
      1367,
    ],
    "dependents": [
      1370,
    ],
    "id": 1368,
    "path": "src/App.tsx",
  },
  {
    "dependencies": [
      254,
      448,
      1368,
      1369,
    ],
    "dependents": [],
    "id": 1370,
    "path": "index.js",
  },
]
`;

exports[`DependencyGraph > removeModule > should match snapshot 1`] = `
[
  {
    "dependencies": [
      1359,
    ],
    "dependents": [
      1371,
    ],
    "id": 1372,
    "path": "root/screens.ts",
  },
  {
    "dependencies": [
      1359,
    ],
    "dependents": [],
    "id": 1374,
    "path": "re-export.ts",
  },
  {
    "dependencies": [
      73,
      448,
      1372,
    ],
    "dependents": [
      1370,
    ],
    "id": 1371,
    "path": "root/entry.ts",
  },
  {
    "dependencies": [
      254,
      448,
      1368,
      1369,
      1371,
    ],
    "dependents": [],
    "id": 1370,
    "path": "index.js",
  },
]
`;

exports[`DependencyGraph > size > should match snapshot 1`] = `1371`;

exports[`DependencyGraph > updateModule > should match snapshots 1`] = `
[
  {
    "dependencies": [
      509,
      73,
      448,
      518,
      1043,
      1123,
      1358,
      1373,
    ],
    "dependents": [
      1362,
      1372,
      1374,
    ],
    "id": 1359,
    "path": "src/screens/MainScreen.tsx",
  },
]
`;

exports[`DependencyGraph > updateModule > should match snapshots 2`] = `
[
  {
    "dependencies": [
      509,
      73,
      448,
      518,
      1043,
      1123,
      1358,
      1373,
    ],
    "dependents": [
      1362,
      1372,
      1374,
    ],
    "id": 1359,
    "path": "src/screens/MainScreen.tsx",
  },
]
`;

exports[`DependencyGraph > updateModule > should match snapshots 3`] = `
[
  {
    "dependencies": [
      1361,
      1359,
    ],
    "dependents": [
      1363,
    ],
    "id": 1362,
    "path": "src/screens/index.ts",
  },
  {
    "dependencies": [
      1359,
    ],
    "dependents": [
      1371,
    ],
    "id": 1372,
    "path": "root/screens.ts",
  },
  {
    "dependencies": [
      1359,
    ],
    "dependents": [],
    "id": 1374,
    "path": "re-export.ts",
  },
  {
    "dependencies": [
      509,
      73,
      1119,
      1362,
    ],
    "dependents": [
      1364,
    ],
    "id": 1363,
    "path": "src/navigators/RootStack.tsx",
  },
  {
    "dependencies": [
      73,
      448,
      1372,
    ],
    "dependents": [
      1370,
    ],
    "id": 1371,
    "path": "root/entry.ts",
  },
  {
    "dependencies": [
      1363,
    ],
    "dependents": [
      1368,
    ],
    "id": 1364,
    "path": "src/navigators/index.ts",
  },
  {
    "dependencies": [
      254,
      448,
      1368,
      1369,
      1371,
    ],
    "dependents": [],
    "id": 1370,
    "path": "index.js",
  },
  {
    "dependencies": [
      509,
      73,
      518,
      814,
      914,
      986,
      1043,
      1364,
      1367,
    ],
    "dependents": [
      1370,
    ],
    "id": 1368,
    "path": "src/App.tsx",
  },
]
`;
